--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								are more related when compared to those that are further away.'<br />
 																	- Waldo Tobler</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/world.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
