--- a/index.html
+++ b/index.html
@@ -66,16 +66,21 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
+										<h2>Resources: Spatial Patterns</h2>
 										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>Everyone around the globe relies on natural resources to support their lives <br />
+										as well as their local and national economies. However, not all communities have <br />
+										access to the same kinds of resources in the same amounts. Many natural resources <br />
+										that are very common in one part of the world are almost nonexistent in others. <br />
+										For instance, while many countries have systems in place to treat and distribute <br />
+										clean drinking water, in many other countries around the globe, communities may <br />
+										only have access to untreated or contaminated water. Understanding the distribution <br />
+										 of resources around the world helps us understand regional and global economies, and helps <br />
+										 us think critically about how to make sure that all communities have the resources <br />
+										 they need to thrive.</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
