Update spotlight section 1 column text

--- a/index.html
+++ b/index.html
@@ -77,12 +77,9 @@
 										that are very common in one part of the world are almost nonexistent in others. </p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>For instance, while many countries have systems in place to treat and distribute <br />
-									   clean drinking water, in many other countries around the globe, communities may <br />
-									   only have access to untreated or contaminated water. Understanding the distribution <br />
-									   of resources around the world helps us understand regional and global economies, and helps <br />
-									   us think critically about how to make sure that all communities have the resources <br />
-									   they need to thrive.</p>
+									<p>For instance, while many countries have systems in place to treat and distribute clean drinking water, in many other countries around the globe, communities may <br />
+									   only have access to untreated or contaminated water. Understanding the distribution of resources around the world helps us understand regional and global economies, <br />
+									   and helps us think critically about how to make sure that all communities have the resources they need to thrive.</p>
 								</div>
 							</div>
 						</div>
