--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/world03.JPG" alt="" /></span>
+					<span class="image fit main"><img src="images/world03.jpeg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum amet non magna accumsan</h2>
