Update with ISS Google Maps Link

--- a/index.html
+++ b/index.html
@@ -66,20 +66,19 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Resources: Spatial Patterns</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Observing Earth From Space</h2>
+										<p> Space is the place to really know a planet</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Everyone around the globe relies on natural resources to support their lives <br />
-										as well as their local and national economies. However, not all communities have <br />
-										access to the same kinds of resources in the same amounts. Many natural resources <br />
-										that are very common in one part of the world are almost nonexistent in others. </p>
+									<p> The Milky Way contains between 100 - 400 billion stars <br />
+										So why study Earth? Becuase Earth is the one place in the entire solar system where we know we can live. <br /></p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>For instance, while many countries have systems in place to treat and distribute clean drinking water, in many other countries around the globe, communities may <br />
-									   only have access to untreated or contaminated water. Understanding the distribution of resources around the world helps us understand regional and global economies, <br />
-									   and helps us think critically about how to make sure that all communities have the resources they need to thrive.</p>
+									<p>Today, NASA has multiple missions that focus on observing changes on Earth. We are trying to answer big questions: <br />
+									How is Earth changing? <br />
+									What's causing these changes? <br />
+									How can we better manage our natural resources?</b> </p>
 								</div>
 							</div>
 						</div>
@@ -92,12 +91,12 @@
 					<span class="image fit main"><img src="images/world03.jpeg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>Tour the International Space Station</h2>
+							<p>Explore the amazing Internation Space Station via Google Maps</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p> ala Street View</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://www.google.com/maps/space/iss/@29.5602853,-95.0853914,2a,90y,219.12h,89.93t/data=!3m6!1e1!3m4!1szChzPIAn4RIAAAQvxgbyEg!2e0!7i10000!8i5000" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
